--- a/package.json
+++ b/package.json
@@ -1,14 +1,34 @@
 {
-  "name": "vscode-rag-vulnerability-detector",
-  "displayName": "代码漏洞检测器",
-  "description": "使用RAG技术检测代码中的潜在安全漏洞",
-  "version": "0.1.0",
+  "name": "vscode-rag-vulnerability-hinter",
+  "displayName": "code audit hinter",
+  "description": "hinter for your audit",
+  "version": "0.1.2",
+  "publisher": "BradMoonUESTC",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/BradMoonUESTC/audit-hint.git"
+  },
   "engines": {
     "vscode": "^1.60.0"
   },
   "categories": [
     "Other"
   ],
+  "galleryBanner": {
+    "color": "#C80000",
+    "theme": "dark"
+  },
+  "keywords": [
+    "安全",
+    "漏洞",
+    "代码审计",
+    "RAG",
+    "AI",
+    "audit hint",
+    "security",
+    "vulnerability"
+  ],
+  "license": "MIT",
   "activationEvents": [
     "onStartupFinished"
   ],
@@ -17,7 +37,7 @@
     "commands": [
       {
         "command": "vulnerability-detector.openVulnerabilityPanel",
-        "title": "打开代码漏洞分析面板"
+        "title": "打开代码漏洞checklist分析面板"
       },
       {
         "command": "vulnerability-analyzer.analyzeSelectedCode",
@@ -50,7 +70,7 @@
   },
   "devDependencies": {
     "@types/node": "^16.11.7",
-    "@types/vscode": "^1.97.0",
+    "@types/vscode": "^1.60.0",
     "@typescript-eslint/eslint-plugin": "^5.30.0",
     "@typescript-eslint/parser": "^5.30.0",
     "eslint": "^8.18.0",
@@ -58,10 +78,9 @@
     "typescript": "^4.9.5",
     "vscode-test": "^1.6.1"
   },
-  "keywords": [],
   "author": "",
-  "license": "ISC",
   "dependencies": {
-    "axios": "^1.8.1"
+    "axios": "^1.8.1",
+    "vsce": "^2.15.0"
   }
 }
